--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Template...</title>
-        <link rel="icon" type="image/icon-x" href="./img/favicon.jfif" />
+        <link rel="icon" type="image/icon-x" href="./img/favicon.png" />
         <link rel="stylesheet" href="./css/style.css"/>
     </head>
     <body>
